volexc/tests/ui/mapkey_struct_with_map.rust.out
Error: invalid map key type: maps cannot be used as map keys
    ╭─[ mapkey_struct_with_map.vol:7:15 ]
    │
  7 │     metadata: {string:string};
    │               ───────┬───────  
    │                      ╰───────── map type used here
    │ 
 11 │     data: {Key:string};
    │            ─┬─  
    │             ╰─── struct 'Key' contains invalid field
────╯